package com.example.demo.model;

public enum ArticleStatus {
    AVAILABLE,
    RENTED,
    INACTIVE
}


