package com.example.demo.model;

public enum CategoryStatus {
    ACTIVE,
    DRAFT
}
