package com.example.demo.model;

public enum KitStatus {
    ACTIVE,
    FINISHED,
    UPCOMING,
}
