package com.example.demo.model;

public enum ServiceStatus {
    DRAFT, ACTIVE, UNAVAILABLE
}
