package com.example.demo.model;

public enum TransactionType {
    EARNING,      // Dinero recibido por alquilar
    PAYMENT,      // Dinero pagado por alquilar kit
    WITHDRAWAL    // Dinero retirado a cuenta bancaria
}
