package com.example.demo.model;

public enum UserRole {
    USER,
    ADMIN
}
